@@ -121,8 +121,7 @@
 
 
         <!-- Third party dependency versions -->
-        <orientdb.version>1.7.10</orientdb.version>
-        <orientdb.studio.version>1.7.10</orientdb.studio.version>
+        <orientdb.version>3.2.29</orientdb.version>
         <javascript.maven.plugin.version>2.0.0-alpha-1</javascript.maven.plugin.version>
         <joda-time.version>2.9.4</joda-time.version>
         <h2.version>1.4.192</h2.version>
@@ -133,7 +132,7 @@
         <!-- quartz 2.x is not compatible yet -->
         <quartz.version>1.8.6_1</quartz.version>
         <rhino.version>1.7R4_1</rhino.version>
-        <groovy.version>2.4.7</groovy.version>
+        <groovy.version>2.4.21</groovy.version>
 
         <!-- OSGi/Felix versions -->
         <!-- Felix 5.4 Framework implements OSGi R6 specification -->
@@ -141,7 +140,7 @@
         <osgi.compendium.version>6.0.0</osgi.compendium.version>
         <osgi.enterprise.version>6.0.0</osgi.enterprise.version>
 
-        <felix.framework.version>5.4.0</felix.framework.version>
+        <felix.framework.version>5.6.12</felix.framework.version>
         <felix.configadmin.version>1.8.8</felix.configadmin.version>
         <felix.eventadmin.version>1.4.6</felix.eventadmin.version>
         <felix.gogo.shell.version>0.12.0</felix.gogo.shell.version>
@@ -149,8 +148,8 @@
         <felix.metatype.version>1.1.2</felix.metatype.version>
         <felix.fileinstall.version>3.5.4</felix.fileinstall.version>
         <felix.log.version>1.0.1</felix.log.version>
-        <felix.scr.version>2.0.6</felix.scr.version>
-        <felix.scr.annotations.version>1.10.0</felix.scr.annotations.version>
+        <felix.scr.version>1.8.4</felix.scr.version>
+        <felix.scr.annotations.version>1.12.0</felix.scr.annotations.version>
         <felix.shell.version>1.4.3</felix.shell.version>
         <felix.shell.tui.version>1.4.1</felix.shell.tui.version>
         <felix.webconsole.version>4.2.16</felix.webconsole.version>
@@ -178,6 +177,7 @@
         <apache.commons-codec.version>1.10</apache.commons-codec.version>
         <apache.commons-io.version>2.5</apache.commons-io.version>
         <apache.commons-fileupload.version>1.3.2</apache.commons-fileupload.version>
+        <java.surefire.options></java.surefire.options>
     </properties>
 
     <modules>
@@ -351,6 +351,18 @@
                     </plugin>
                 </plugins>
             </build>
+        </profile>
+        <profile>
+            <id>jdk17.options</id>
+            <activation>
+                <jdk>[17,)</jdk>
+            </activation>
+            <properties>
+                <java.surefire.options>
+                    --add-opens java.base/java.lang=ALL-UNNAMED
+                    --add-opens java.base/java.io=ALL-UNNAMED
+                </java.surefire.options>
+            </properties>
         </profile>
     </profiles>
 
@@ -679,6 +691,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.2.5</version>
+                    <configuration>
+                        <argLine>${java.surefire.options}</argLine>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
